[package]
name = "cercami"
version = "0.1.0"
authors = ["Alessandro Cifani <alessandro.cifani@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
quick-xml = { version = "0.18", features = [ "serialize" ] }
rust-stemmers = "1.2.0"
